maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:3: error: not found: value whiel
  whiel(!estFaceMur()){
  ^